fix bug:4107-aligned view button with project title in projects list

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -93,7 +93,6 @@
 }
 
 .search-primary-button {
-  margin-top: 20px;
   padding: 5px 20px;
 }
 
